[project]
name = "chatbot"
version = "0.1.0"
description = "Minimal FastAPI + LangGraph chatbot using OpenRouter"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "langgraph>=0.2.34",
  "typing-extensions>=4.9",
]

[tool.uv]
# uv will create a .venv in the project by default on sync

[tool.ruff]
line-length = 100
target-version = "py311" 